# fehther

./: Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: release.x86.yml
config/: config.ini
fehter/: config.ini
fehther/: config.ini
src/: config.rs  fetch_weather.rs  main.rs  settings.rs  types.rs  utils.rs
src/types/: daytime.rs  default_types.rs  mod.rs  modes.rs  weathertype.rs
test_config/: test_1.ini  test_2.ini  test_3.ini  test_4.ini
