[package]
name = "wallpaper-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
tzf-rs = "0.4.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
rust-ini = "0.21.1"
home = "0.5"
