[package]
name = "fehther"
version = "0.1.0"
edition = "2024"

[dependencies]
tzf-rs = "0.4.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
rust-ini = "0.21.1"
home = "0.5"
